@@ -7,6 +7,7 @@ changelog for ephFrame
 + fixed js packer to append line-feed at end of packed js files
 + added after[Action] and before[Action] callbacks in the controller
 + added subversion keywords and new formatted copyright message on every file
++ SGMLAttributes don’t render attributes with empty values anymore
 
 2009-05-25
 + added model behaviors callable from every model
